--- a/krishn4.html
+++ b/krishn4.html
@@ -39,15 +39,32 @@
     <h3>HTML Table</h3>
     <table>
         <thead>
-            <strong>
-            <tr>Name</tr>
-            <tr>Employee ID</tr>
-            <tr>Gender</tr>
-            <tr>Employee Role</tr>
-        </strong>
+            <tr>
+                <th>Name</th>
+                <th>Employee ID</th>
+                <th>Gender</th>
+                <th>Employee Role</th>
+            </tr>
         </thead>
         <tbody>
-
+            <tr>
+                <td>Krishn_Kumar</td>
+                <td>abc123</td>
+                <td>Male</td>
+                <td>founder</td>
+            </tr>
+            <tr>
+                <td>Rohan Das</td>
+                <td>12345</td>
+                <td>Male</td>
+                <td>co founder</td>
+            </tr>
+            <tr>
+                <td>Anubhav Paswan</td>
+                <td>67899</td>
+                <td>Male</td>
+                <td>programmer</td>
+            </tr>
         </tbody>
     </table>
 
