Modified_krishn7.html

--- a/krishn7.html
+++ b/krishn7.html
@@ -5,10 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ids and Classes HTML</title>
 </head>
 
 <body>
+    <h3>Ids and Classes Tutorial</h3>
+    <!-- This is for uniquely identify by giving id -->
+    <!-- We can mention multiple classes at same place by giving space as redBg, blackBorder-->
+    <!-- but we cannot define multiple ids with same name anywhere -->
+
+    <div id="mainBox" class="redBg blackBorder"></div>
+
+
+    <!-- here . is for class and # is for id -->
+    <!-- give any tag name span.<classname> hit enter -->
+    <span class="classname"></span>
+
+    <!-- give any tag name span#<idname> then hit enter -->
+    <span id="idname"></span>
+
+    <!-- it takes div tag by default -->
+    <!-- here i just type .<className> and hit enter -->
+    <div class="className"></div>
+
+    <!-- we can create multiple item using Emmet -->
+    <!-- span.className1.className2.className3*4 and hit Tab -->
+    <!-- this will create multiple classes -->
+    <span class="className1 className2 className3">First</span>
+    <span class="className1 className2 className3">Second</span>
+    <span class="className1 className2 className3">Third</span>
+    <span class="className1 className2 className3">Fourth</span>
+
 
 </body>
 
