Now i am heading to CSS

--- a/krishn9.html
+++ b/krishn9.html
@@ -12,8 +12,8 @@
     <h3>Semantic Elements</h3>
 
     <!-- This can make a drop down box that contain mentioned text -->
-    <!-- If we add summry tag then it will give its summry -->
-    <details title="My Info">
+
+    <details>
         My name is Krishn Kumar and as a Web Developer I am Building Website for myself this is my favourite work that i like to do i am also emoloyed in S. N. College of Education as a Clerk cum Computer Operator
     </details>
 </body>
