--- a/krishn10.html
+++ b/krishn10.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Tutorial</title>
     <style>
+        /* This !important makes the high priority of this style tag in using CSS otherwise below written code will be preffered for style */
+        
         p {
             color: rgb(28, 57, 87) !important;
             background-color: moccasin !important;
