--- a/krishn12.html
+++ b/krishn12.html
@@ -5,11 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Developer Tools</title>
+    <style>
+        p {
+            color: navy;
+            font-style: italic;
+            background-color: silver;
+        }
+    </style>
 </head>
 
 <body>
 
+    <!-- Using Developer Tools of crome we can modify our website directly on crome -->
+    <h3>Developer Tools Tutorial</h3>
+    <p>This paragraph is for Tutorial of Developer Tools</p>
 </body>
 
 </html>
