--- a/CSS-Intro.html
+++ b/CSS-Intro.html
@@ -14,7 +14,7 @@
             background-color: moccasin !important;
         }
     </style>
-    <!-- Below is example of Internal CSS -->
+    <!-- Below is example of External CSS -->
     <link rel="stylesheet" href="krishn1.css">
 </head>
 
