Visibility and z-index

--- a/Visibility+Z-Index.html
+++ b/Visibility+Z-Index.html
@@ -32,6 +32,7 @@
         background-color: blue;
         position: relative;
         left: 5px;
+        /* which element has greater z-index value will cover the element having smaller z-index value */
         z-index: 2;
     }
     
