--- a/Animations and Keyframes.html
+++ b/Animations and Keyframes.html
@@ -13,12 +13,17 @@
     }
     
     .box {
-        background-color: rgb(0, 38, 255);
+        background-color: rgb(236, 171, 101);
+        display: flex;
+        /* align-items: center; */
+        /* justify-content: center; */
+        font-size: 30px;
+        color: red;
         width: 250px;
         height: 250px;
         position: relative;
         /* This is an animation can be used as progress bar */
-        animation-name: krishn2;
+        /* animation-name: krishn2; */
         /* animation-duration: 2.5s; */
         /* animation-iteration-count: 1; */
         /* animation-fill-mode: forwards; */
@@ -75,7 +80,7 @@
 <body>
     <div class="container">
         <div class="box">
-            This is a Box.
+            IndianDexter
         </div>
     </div>
 </body>
