--- a/Animations and Keyframes.html
+++ b/Animations and Keyframes.html
@@ -13,12 +13,12 @@
     }
     
     .box {
-        background-color: rgb(236, 171, 101);
+        background-color: rgb(255, 0, 0);
         display: flex;
         /* align-items: center; */
         /* justify-content: center; */
         font-size: 30px;
-        color: red;
+        color: rgb(255, 251, 0);
         width: 250px;
         height: 250px;
         position: relative;
