--- a/test.html
+++ b/test.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         .container {
-            position: relative;
+            position: absolute;
             width: 50%;
+            border: 2px solid red;
         }
         
         .image {
@@ -50,15 +51,17 @@
 <body>
     <div class="container">
 
+
         <img src="/Food_Website/img/skype-3384016_1280.png" alt="Avatar" class="image" style="width: 50%">
 
         <div class="middle">
-
             <p class="text">John Doe</p>
-
         </div>
 
+
     </div>
+
+
 
 </body>
 
