--- a/CSS-Grids II.html
+++ b/CSS-Grids II.html
@@ -21,7 +21,7 @@
         grid-template-columns: 1fr 4fr;
         /* --------------------------------------------------------------------------------------
         This is to divide the columns into 2fr in 9 columns */
-        grid-template-columns: repeat(9, 2fr);
+        /* grid-template-columns: repeat(9, 2fr); */
         /* -------------------------------------------------------------------------------------
         This is to create the spaces/gaps between the boxes  */
         grid-gap: 1rem;
